@@ -358,6 +358,9 @@ Trunk (unreleased changes)
 
     HADOOP-5838. Fix a few javac warnings in HDFS. (Raghu Angadi)
 
+    HADOOP-5854. Fix a few "Inconsistent Synchronization" warnings in HDFS.
+    (Raghu Angadi)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
